[package]
name = "notifiers"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
a2 = { git = "https://github.com/gferon/a2/", branch = "apns-push-type" }
anyhow = "1.0.32"
async-std = { version = "1.9", features = ["tokio1", "attributes", "unstable"] }
femme = "2.1.0"
humantime = "2.0.1"
hyper = { version = "0.14", features = ["tcp"] }
log = "0.4.11"
serde = { version = "1.0.114", features = ["derive"] }
sled = "0.34.2"
structopt = "0.3.15"
tide = "0.16.0"
